--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,6 @@
-include README.rst CHANGES.rst CONTRIBUTING.rst LICENSE.rst tox.ini setup.cfg .coveragerc
+include VERSION.txt README.rst CHANGES.rst CONTRIBUTING.rst LICENSE.rst tox.ini setup.cfg .coveragerc
 
 recursive-include luma *.py
-
-recursive-include examples *
 
 recursive-include doc *
 prune doc/_build
