--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,15 @@ matrix:
         - python: 3.4
           env: TOXENV=py34
         - python: 3.5
-          env: TOXENV=py35
-        - python: 3.6-dev
           env: TOXENV=py36
+        - python: 3.6
+          env: TOXENV=py36
+        - python: 3.7-dev
+          env: TOXENV=py37
         - python: 2.7
           env: TOXENV=qa
     allow_failures:
-        - python: 3.6-dev
+        - python: 3.7-dev
 addons:
   apt:
     packages:
