--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: true
 language: python
 cache: pip
 
@@ -18,6 +18,11 @@ matrix:
           env: TOXENV=qa
     allow_failures:
         - python: 3.7-dev
+
+addons:
+  apt:
+    packages:
+    - i2c-tools
 
 install: pip install -U pip tox coveralls
 script: tox -vv
