--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include VERSION.txt README.rst CHANGES.rst CONTRIBUTING.rst LICENSE.rst tox.ini setup.cfg .coveragerc
 
-recursive-include luma *.py *.png
+recursive-include luma *.py
 
 recursive-include doc *
 prune doc/_build
