pull test dependencies from setup.py

--- a/tox.ini
+++ b/tox.ini
@@ -11,9 +11,7 @@ commands =
     coverage run -m py.test -v
     coverage report
 deps =
-    pytest
-    coverage
-    mock
+    .[test]
 
 [testenv:qa]
 commands =
