--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
         - python: 2.7
           env: TOXENV=qa
 
-install: pip install -IU setuptools pip tox coveralls
+install: pip install --ignore-installed --upgrade setuptools pip tox coveralls
 script: tox -vv
 after_success:
   - coveralls
