--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ skip_missing_interpreters = True
 [testenv]
 commands =
     python setup.py install
-    coverage run -m py.test -v -r w -s
+    coverage run -m py.test -v -r wsx -s
     coverage report
 deps =
     .[test]
