--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,6 @@ deps =
 [testenv:qa]
 commands =
     flake8
-    rstcheck README.rst
-    rstcheck CHANGES.rst
+    rstcheck README.rst CHANGES.rst CONTRIBUTING.rst
 deps =
     .[qa]
