--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ skip_missing_interpreters = True
 [testenv]
 commands =
     python setup.py install
-    coverage run -m py.test -v -r w -s
+    coverage run -m py.test -v -r wsx -s
     coverage report
 deps =
     .[test]
@@ -16,7 +16,6 @@ deps =
 [testenv:qa]
 commands =
     flake8
-    rstcheck README.rst
-    rstcheck CHANGES.rst
+    rstcheck README.rst CHANGES.rst CONTRIBUTING.rst
 deps =
     .[qa]
