--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ commands =
 deps = .[qa]
 
 [testenv:doc]
-  commands = sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
-  changedir = doc
-  deps = .[docs]
+commands = 
+    sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
+changedir = doc
+deps = .[docs]
