--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ matrix:
           env: TOXENV=py37
         - python: 3.5
           env: TOXENV=qa,doc
+    allow_failures:
+        - python: 3.7-dev
+          env: TOXENV=py37
 
 install: pip install --ignore-installed --upgrade setuptools pip tox coveralls
 script: tox -vv
