--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ matrix:
           env: TOXENV=py36
         - python: 3.7
           env: TOXENV=py37
-        - python: 3.8-dev
+        - python: 3.8
           env: TOXENV=py38
         - python: 3.5
           env: TOXENV=qa,doc
 
 install: pip install --ignore-installed --upgrade setuptools pip tox coveralls
 script: tox -vv
-after_success: if [ "$TOXENV" == "py36" ]; then coveralls; fi
+after_success: if [ "$TOXENV" == "py38" ]; then coveralls; fi
