enable doc linkcheck

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,8 @@ deps = .[qa]
 
 [testenv:doc]
 commands =
+    make linkcheck
     sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 changedir = doc
+allowlist_externals = make
 deps = .[docs]
