--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,11 @@ envlist = py{36,37,38,39},qa,doc
 skip_missing_interpreters = True
 
 [testenv]
+setenv =
+    PYTHONDEVMODE=1
 commands =
     python setup.py install
-    coverage run -m py.test --timeout=10 -v -r wsx -s
+    coverage run -m py.test
     coverage report
 deps = .[test]
 
