replace usage of format with f-string (#203)
* replace usage of format with f-string

* fix markup

* enable doc linkcheck

* fix redirecting links

* fix markup

* enable pytest-timeout

* move skip to helpers

* move pytest settings to separate config file

Co-authored-by: Richard Hull <rm_hull@yahoo.co.uk>

--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,11 @@ envlist = py{36,37,38,39},qa,doc
 skip_missing_interpreters = True
 
 [testenv]
+setenv =
+    PYTHONDEVMODE=1
 commands =
     python setup.py install
-    coverage run -m py.test -v -r wsx -s
+    coverage run -m py.test
     coverage report
 deps = .[test]
 
@@ -20,6 +22,8 @@ deps = .[qa]
 
 [testenv:doc]
 commands =
+    make linkcheck
     sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 changedir = doc
+allowlist_externals = make
 deps = .[docs]
