BREAKING CHANGE: Improved framebuffer performance

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ setenv =
     PYTHONDEVMODE=1
 commands =
     python setup.py install
-    coverage run -m py.test
+    coverage run -m py.test {posargs}
     coverage report
 deps = .[test]
 
