--- a/tox.ini
+++ b/tox.ini
@@ -6,12 +6,14 @@ envlist = py{36,37,38,39},qa,doc
 skip_missing_interpreters = True
 
 [testenv]
+usedevelop = true
 setenv =
     PYTHONDEVMODE=1
 commands =
+    coverage erase
     python setup.py install
-    coverage run -m py.test
-    coverage report
+    pytest --cov=luma
+    coverage html
 deps = .[test]
 
 [testenv:qa]
