--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
         - python: 3.8
           env: TOXENV=qa,doc
 
-install: pip install --ignore-installed --upgrade setuptools pip tox coveralls
+install:
+  - pip uninstall virtualenv
+  - pip install --ignore-installed --upgrade setuptools pip tox coveralls
 script: tox -vv
 after_success: if [ "$TOXENV" == "py38" ]; then coveralls; fi
