--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
           env: TOXENV=qa,doc
 
 install:
-  - pip uninstall virtualenv
+  - pip uninstall virtualenv -y
   - pip install --ignore-installed --upgrade setuptools pip tox coveralls
 script: tox -vv
 after_success: if [ "$TOXENV" == "py38" ]; then coveralls; fi
