Improved diff-to-previous framebuffer performance (#205)
* BREAKING CHANGE: Improved framebuffer performance

* Update CHANGES.rst

* Revert spacing

* Set dimensions on first full redraw

* Remove device dependency; rely instead on supplied image dimensions instead

* Fix flak8 violations

* Add framebuffer parsing to cmdline rather than handling in devices

* Add frame-tracking debug capability

* Don't need a constructor any more

* Process rows -> columns rather than columns first; Add test for debug flag

* Minor refactoring

* Respond to PR comments

* Update changelog

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
 commands =
     coverage erase
     python setup.py install
-    pytest --cov=luma
+    pytest --cov=luma {posargs}
     coverage html
 deps = .[test]
 
