Framebuffer device (rebase)

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,10 @@ commands =
     coverage html
 deps = .[test]
 
+[testenv:watch]  # use ptw (=pytestwatch) to run tests when files change
+commands =
+    ptw -v {posargs}
+
 [testenv:qa]
 commands =
     flake8
