--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: bionic
+dist: focal
 language: python
 cache: pip
 
@@ -15,6 +15,8 @@ matrix:
         - python: 3.8
           env: TOXENV=qa,doc
 
-install: pip install --ignore-installed --upgrade setuptools pip tox coveralls
+install:
+  - pip uninstall virtualenv -y
+  - pip install --ignore-installed --upgrade setuptools pip tox coveralls
 script: tox -vv
 after_success: if [ "$TOXENV" == "py38" ]; then coveralls; fi
