--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-      - run: |
-          pip install --upgrade setuptools pip wheel tox coveralls
-          python -m tox -vv
+      - name: Install Python packages
+        run: pip install --upgrade setuptools pip wheel tox coveralls
+      - name: Run tests
+        env:
+          TOX_ENV: py${{ matrix.python-version }}
+        run: python -m tox -e $TOX_ENV
