--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-minor-version: [6, 7, 8, 9]
     steps:
       - uses: actions/checkout@v2
       - name: Setup pip cache
@@ -26,12 +26,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.${{ matrix.python-minor-version }}
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       - name: Install Python packages
         run: pip install --upgrade setuptools pip wheel tox coveralls
       - name: Run tests
         env:
-          TOX_ENV: py${{ matrix.python-version }}
+          TOX_ENV: py3${{ matrix.python-minor-version }}
+        run: python -m tox -e $TOX_ENV
+      - name: QA
+        env:
+          TOX_ENV: qa,doc
         run: python -m tox -e $TOX_ENV
