--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,17 @@ jobs:
         env:
           TOX_ENV: qa,doc
         run: python -m tox -e $TOX_ENV
+      - name: Coveralls
+        uses: AndreMiras/coveralls-python-action@develop
+        with:
+          parallel: true
+          flag-name: Unit Test
+
+    coveralls_finish:
+      needs: build
+      runs-on: ubuntu-latest
+      steps:
+        - name: Coveralls Finished
+          uses: AndreMiras/coveralls-python-action@develop
+          with:
+            parallel-finished: true
