--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       - name: Install Python packages
-        run: pip install --upgrade setuptools pip wheel tox
+        run: pip install --upgrade setuptools pip wheel tox coveralls
       - name: Run tests
         env:
           TOX_ENV: py3${{ matrix.python-minor-version }}
