--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         env:
           TOX_ENV: qa,doc
         run: python -m tox -e $TOX_ENV
-      - name: Upload Coverage
+      - name: Coveralls
         run: coveralls --service=github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -48,7 +48,7 @@ jobs:
           COVERALLS_PARALLEL: true
 
   coveralls:
-    name: Finish Coveralls
+    name: Coveralls
     needs: build
     runs-on: ubuntu-latest
     container: python:3-slim
