move metadata to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,51 @@
+[metadata]
+name = luma.core
+version = attr: luma.core.__version__
+description = A component library to support SBC display drivers
+long_description = file: README.rst, CONTRIB.rst, CHANGES.rst
+long_description_content_type = text/x-rst
+keywords = raspberry, orange, banana, pi, rpi, opi, sbc, oled, lcd, led, display, screen, spi, i2c, ftdi, usb
+author = Richard Hull
+author_email = richard.hull@destructuring-bind.org
+url = https://github.com/rm-hull/luma.core
+license = MIT
+classifiers =
+    License :: OSI Approved :: MIT License
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Education
+    Intended Audience :: Developers
+    Topic :: Education
+    Topic :: System :: Hardware
+    Topic :: System :: Hardware :: Hardware Drivers
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+
+[options]
+zip_safe = False
+packages = find:
+python_requires = >=3.6, <4
+namespace_packages = luma
+install_requires =
+    pillow>=4.0.0
+    smbus2
+    pyftdi
+    cbor2
+    deprecated
+    RPI.GPIO; platform_system=="Linux"
+    spidev; platform_system=="Linux"
+tests_require =
+    pytest
+    pytest-cov
+    pytest-timeout
+    pytest-watch
+
+[options.extras_require]
+docs = sphinx>=1.5.1
+qa = flake8; rstcheck
+
 [bdist_wheel]
 universal = 1
 
