--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README.rst CHANGES.rst CONTRIBUTING.rst LICENSE.rst tox.ini setup.cfg pytest.ini .coveragerc
+include README.rst CHANGES.rst CONTRIBUTING.rst LICENSE.rst pyproject.toml setup.cfg tox.ini pytest.ini .coveragerc
 
 recursive-include luma *.py
 
