--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-# Copyright (c) 2017-2020 Richard Hull and contributors
+# Copyright (c) 2017-2021 Richard Hull and contributors
 # See LICENSE.rst for details.
 
 [tox]
@@ -7,12 +7,15 @@ skip_missing_interpreters = True
 
 [testenv]
 usedevelop = true
+allowlist_externals =
+    py.test
+    coverage
 setenv =
     PYTHONDEVMODE=1
 commands =
     coverage erase
     python setup.py install
-    pytest --cov=luma {posargs}
+    py.test --cov=luma {posargs}
     coverage html
 deps = .[test]
 
