add test extras

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ tests_require =
 [options.extras_require]
 docs = sphinx>=1.5.1
 qa = flake8; rstcheck
+test = pytest; pytest-cov; pytest-timeout; pytest-watch
 
 [bdist_wheel]
 universal = 1
