--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,11 @@ jobs:
       - name: Run tests
         env:
           TOX_ENV: py3${{ matrix.python-minor-version }}
-        run: python -m tox -r -e $TOX_ENV
+        run: python -m tox -e $TOX_ENV
       - name: QA
         env:
           TOX_ENV: qa,doc
-        run: python -m tox -r -e $TOX_ENV
+        run: python -m tox -e $TOX_ENV
       - name: Coveralls
         run: coveralls --service=github
         env:
