--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = luma.core
 version = attr: luma.core.__version__
 description = A component library to support SBC display drivers
-long_description = file: README.rst, CONTRIB.rst, CHANGES.rst
+long_description = file: README.rst, CONTRIBUTING.rst, CHANGES.rst
 long_description_content_type = text/x-rst
 keywords = raspberry, orange, banana, pi, rpi, opi, sbc, oled, lcd, led, display, screen, spi, i2c, ftdi, usb
 author = Richard Hull
