--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,7 @@ jobs:
         env:
           TOX_ENV: py3${{ matrix.python-minor-version }}
         run: |
-          python_env=echo "$TOX_ENV" | sed -e s/-dev$//
-          echo $python_env
+          python_env=$(echo $TOX_ENV | sed -e s/-dev$//)
           python -m tox -e ${python_env}
       - name: QA
         env:
