use implicit namespace package (fixes #254)

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ classifiers =
 
 [options]
 zip_safe = False
-packages = find:
+packages = find_namespace:
 python_requires = >=3.7, <4
 namespace_packages = luma
 install_requires =
@@ -43,8 +43,14 @@ tests_require =
 
 [options.extras_require]
 docs = sphinx>=1.5.1
-qa = flake8; rstcheck
-test = pytest; pytest-cov; pytest-timeout; pytest-watch
+qa =
+    flake8
+    rstcheck
+test =
+    pytest
+    pytest-cov
+    pytest-timeout
+    pytest-watch
 
 [bdist_wheel]
 universal = 1
