Drop support for Python 3.6 (#255)
* drop support for Python 3.6 (fixes #252)

* use time.perf_counter_ns (fixes #204)

* remove cmdline.make_serial, deprecated since 1.17.1 (fixes #250)

* ci: stop testing against python 3.6

* remove whitespace

* fix pillow deprecation warning

* fix Pillow deprecation warning

* tests: update image

* remove unused library

* require pillow 9.2.0 or newer

* update changelog

* use f-string

* use implicit namespace package (fixes #254)

* remove deprecated option

Co-authored-by: Richard Hull <rm_hull@yahoo.co.uk>

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,6 @@ classifiers =
     Topic :: System :: Hardware
     Topic :: System :: Hardware :: Hardware Drivers
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
@@ -26,15 +25,13 @@ classifiers =
 
 [options]
 zip_safe = False
-packages = find:
-python_requires = >=3.6, <4
-namespace_packages = luma
+packages = find_namespace:
+python_requires = >=3.7, <4
 install_requires =
-    pillow>=4.0.0
+    pillow>=9.2.0
     smbus2
     pyftdi
     cbor2
-    deprecated
     RPI.GPIO; platform_system=="Linux"
     spidev; platform_system=="Linux"
 tests_require =
@@ -45,8 +42,14 @@ tests_require =
 
 [options.extras_require]
 docs = sphinx>=1.5.1
-qa = flake8; rstcheck
-test = pytest; pytest-cov; pytest-timeout; pytest-watch
+qa =
+    flake8
+    rstcheck
+test =
+    pytest
+    pytest-cov
+    pytest-timeout
+    pytest-watch
 
 [bdist_wheel]
 universal = 1
