--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,9 @@ tests_require =
     pytest-timeout
     pytest-watch
 
+[options.packages.find]
+include = luma*
+
 [options.extras_require]
 docs = sphinx>=1.5.1
 qa =
