--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
             ${{ runner.os }}-pip-v2-
       - name: Set up Python
         uses: actions/setup-python@v4
+        id: setuppy
         with:
           python-version: 3.${{ matrix.python-minor-version }}
       - name: Display Python version
@@ -39,6 +40,7 @@ jobs:
           python_env=$(echo $TOX_ENV | sed -e s/-dev$//)
           python -m tox -e ${python_env}
       - name: QA
+        if: ${{ steps.setuppy.outputs.python-version > 7 }}
         env:
           TOX_ENV: qa,doc
         run: python -m tox -e $TOX_ENV
