Added setup requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ zip_safe = False
 packages = find_namespace:
 python_requires = >=3.7, <4
 install_requires =
+    gpiozero
     pillow>=9.2.0
     smbus2
     pyftdi
