install optional deps

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,11 @@ commands =
     coverage erase
     py.test --cov=luma {posargs}
     coverage html
-deps = .[test]
+deps =
+    .[gpio]
+    .[spi]
+    .[ftdi]
+    .[test]
 
 [testenv:watch]  # use ptw (=pytestwatch) to run tests when files change
 commands =
