switch from RPI.GPIO to rpi-lgpio

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ include = luma*
 
 [options.extras_require]
 gpio =
-    RPI.GPIO; platform_system=="Linux"
+    rpi-lgpio; platform_system=="Linux"
 spi =
     spidev; platform_system=="Linux"
 ftdi =
