Make GPIO/SPI/FTDI optional and switch to rpi-lgpio (#284)
* make gpio/spi/ftdi optional

* install optional deps

* switch from RPI.GPIO to rpi-lgpio

* update changelog

* add py3.14

* ci: update deps

* ci: install dependencies

* ci: unpack in temp dir

* ci: exclude py3.14 for now

* tests: skip tests where device cannot be found

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,10 +31,7 @@ python_requires = >=3.8, <4
 install_requires =
     pillow>=9.2.0
     smbus2
-    pyftdi
     cbor2
-    RPI.GPIO; platform_system=="Linux"
-    spidev; platform_system=="Linux"
 tests_require =
     pytest
     pytest-cov
@@ -45,6 +42,12 @@ tests_require =
 include = luma*
 
 [options.extras_require]
+gpio =
+    rpi-lgpio; platform_system=="Linux"
+spi =
+    spidev; platform_system=="Linux"
+ftdi =
+    pyftdi
 docs =
     sphinx>=1.5.1
     sphinx-rtd-theme
