--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,9 @@ jobs:
       - name: Install Python packages
         run: pip install --upgrade setuptools pip wheel tox coveralls
       - name: Install system dependencies
-        run: sudo apt-get install swig python3-setuptools python3-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install swig python3-setuptools python3-dev
       - name: Install lg library
         run: |
           cd $RUNNER_TEMP
