Refactor lg library installation in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install swig python3-setuptools python3-dev
-      - uses: actions/cache@v5
+      - name: Setup lg cache
+        uses: actions/cache@v5
         id: lgcache
         with:
           path: ${{ runner.temp }}/lg
           key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
-      - name: Install lg library
+      - name: Download and build lg library
         if: steps.lgcache.outputs.cache-hit != 'true'
         run: |
           cd $RUNNER_TEMP
@@ -50,6 +51,9 @@ jobs:
           unzip lg.zip
           cd lg
           make
+      - name: Install lg library
+        run: |
+          cd $RUNNER_TEMP/lg
           sudo make install
       - name: Run tests
         env:
